samples/_failures_safe/1761340950_d16cf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5109ac5.c: In function ‘main’:
./samples/SAFE/__tmp_e5109ac5.c:167:12: error: missing terminating " character
  167 |     printf("Tokens
      |            ^~~~~~~
./samples/SAFE/__tmp_e5109ac5.c:167:5: error: expected expression at end of input
  167 |     printf("Tokens
      |     ^~~~~~
./samples/SAFE/__tmp_e5109ac5.c:167:5: error: expected declaration or statement at end of input
